--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: TheDeploymentGuy
 description: 'TheDeploymentGuy - TechDaiy By SK - Blend of Devops and BigData'
 url: 'http://joshgerdes.com/jekyll-uno'
-baseurl: '/jekyll-uno/#blog'
+baseurl: '/jekyll-uno/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
@@ -25,7 +25,7 @@ defaults:
 # Build settings
 destination: _site
 paginate: 10
-permalink: /:year/:title/
+permalink: /:year/:month/:title/
 markdown: kramdown
 highlighter: rouge
 
