--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: TheDeploymentGuy
 description: 'TheDeploymentGuy - TechDaiy By SK - Blend of Devops and BigData'
 url: 'http://thedeploymentguy.com/'
-#baseurl: '/blog/'
+baseurl: '//'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
