--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: '/'
 
 author:
   name: 'Shailendra Kumar'
-  email: emailtoshailendra@gmail.com
+  email: hello@thedeploymentguy.com
   twitter_username:  KumarShailend
   facebook_username: shailu.foru
   github_username:  kshailen
