--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: TheDeploymentGuy
-description: 'DevOps Consultant. Passionate about Devops, BigData, Virutalization, linux, and microservices. Loves programming in bash and Python. Always love to discuss about KVM, Openstack, vagrant, coreOS, Docker, Containers etc'
+description: 'DevOps Consultant. Passionate about Devops, BigData, Virutalization, linux, and microservices.I always love to discuss about KVM, Openstack, vagrant, coreOS, Docker, Containers,Python,Shell scripting, etc'
 url: 'http://thedeploymentguy.com'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
