updated github link

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
   email: hello@thedeploymentguy.com
   twitter_username:  KumarShailend
   facebook_username: shailu.foru
-  github_username:  kshailen
+  github_username:  thedeploymentguy
   linkedin_username:  unixkshailen
 
 defaults:
