updated facebook username

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author:
   name: 'Shailendra Kumar'
   email: hello@thedeploymentguy.com
   twitter_username:  KumarShailend
-  facebook_username: shailu.foru
+  facebook_username: thedeploymentguy
   github_username:  thedeploymentguy
   linkedin_username:  unixkshailen
 
