--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
 title: TheDeploymentGuy
 description: 'DevOps Consultant. Passionate about Devops, BigData, Virutalization, linux, and microservices. I always love to discuss about KVM, Openstack, vagrant, coreOS, Docker, Containers, Python, Shell scripting, etc'
-url: 'http://thedeploymentguy.com'
+url: 'http://thedeploymentguy.ga'
 baseurl: '/'
 google_analytics: 'UA-104483098-1'
 disqus_shortname: 'thedeploymentguy'
 
 author:
   name: 'Shailendra Kumar'
-  email: hello@thedeploymentguy.com
+  email: emailtoshailendra@gmail.com
   twitter_username:  KumarShailend
   facebook_username: thedeploymentguy
   github_username:  thedeploymentguy
-  linkedin_username:  unixkshailen
+  linkedin_username:  shaikuma
 
 defaults:
   -
