--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -10,7 +10,7 @@ disqus_shortname: 'thedeploymentguy'
 
 author:
   name: 'Shailendra Kumar'
-  email: hello@thedeploymentguy.com
+  email: emailtoshailendra@gmal.com
   twitter_username:  KumarShailend
   facebook_username: shailu.foru
   github_username:  kshailen
